Let providers provide only particular regions
